--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -21,5 +21,7 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
+    - name: Compute code metrics
+      run: java -jar ck071.jar .
     - name: Build with Ant
       run: ant -noinput -buildfile build.xml
