--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
 
-  checkquality:
+  build:
 
     runs-on: ubuntu-latest
 
@@ -24,34 +24,5 @@ jobs:
         distribution: 'temurin'
     - name: Compute code metrics
       run: java -jar ck071.jar .
-
-
-  build:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-    - name: Build with Ant
-      run: ant -noinput -buildfile build.xml
-
-  test:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-    - name: Build with Ant
-      run: ant -noinput -buildfile build.xml
-    - name: Test with Ant and JUnit
+    - name: Build and Test with Ant and JUnit
       run: ant -noinput -buildfile build.xml
