--- a/.gitignore
+++ b/.gitignore
@@ -208,9 +208,10 @@ $RECYCLE.BIN/
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,linux,intellij+all,java,git
 #
 # Cusotmized by Hansae Ju
-log.*
 /bin/
 .classpath
 .project
+score
+log
 log.1
-log.1
+log.*
