--- a/build.xml
+++ b/build.xml
@@ -7,6 +7,8 @@
     <property name="classes.dir" value="${build.dir}/classes"/>
     <property name="jar.dir"     value="${build.dir}/jar"/>
 
+    <property name="tests.dir"     value="src/test"/>
+
     <property name="main-class"  value="engine.Core"/>
 
 
@@ -35,6 +37,7 @@
     <!--<target name="run" depends="jar">
         <java jar="${jar.dir}/${ant.project.name}.jar" fork="true"/>
     </target>-->
-    <target name="main" depends="clean,jar"/>
+    <target name="test" depends="clean,jar"/>
+    <target name="main" depends="test"/>
 
 </project>
