--- a/build.xml
+++ b/build.xml
@@ -19,7 +19,11 @@
 
     <target name="compile">
         <mkdir dir="${classes.dir}"/>
-        <javac srcdir="${src.dir}" destdir="${classes.dir}"/>
+        <javac srcdir="${src.dir}" destdir="${classes.dir}">
+            <classpath>
+                <path id="org.junit" location="lib/junit-4.13.2.jar" />
+            </classpath>
+        </javac>
         <copy todir="${classes.dir}">
             <fileset dir="${res.dir}"/>
         </copy>
