--- a/build.xml
+++ b/build.xml
@@ -1,39 +1,48 @@
 <project name="thu-space-invaders" basedir="." default="main">
 
-    <property name="src.dir"     value="src"/>
-	<property name="res.dir"     value="res"/>
+    <property name="src.dir" value="src" />
+    <property name="res.dir" value="res" />
 
-    <property name="build.dir"   value="build"/>
-    <property name="classes.dir" value="${build.dir}/classes"/>
-    <property name="jar.dir"     value="${build.dir}/jar"/>
+    <property name="build.dir" value="build" />
+    <property name="testbuild.dir" value="${build.dir}/tests" />
+    <property name="classes.dir" value="${build.dir}/classes" />
+    <property name="jar.dir" value="${build.dir}/jar" />
 
-    <property name="tests.dir"     value="src/test"/>
+    <path id="classpath.test">
+        <pathelement location="lib/junit-4.13.2.jar" />
+        <pathelement location="lib/hamcrest-core-1.3.jar" />
+        <pathelement location="${classes.dir}" />
+    </path>
 
-    <property name="main-class"  value="engine.Core"/>
+    <property name="tests.dir" value="test" />
 
+    <property name="main-class" value="engine.Core" />
 
 
     <target name="clean">
-        <delete dir="${build.dir}"/>
+        <delete dir="${build.dir}" />
     </target>
 
     <target name="compile">
-        <mkdir dir="${classes.dir}"/>
-        <javac srcdir="${src.dir}" destdir="${classes.dir}">
-            <classpath>
-                <path id="org.junit" location="lib/junit-4.13.2.jar" />
-            </classpath>
-        </javac>
+        <mkdir dir="${classes.dir}" />
+        <javac srcdir="${src.dir}" destdir="${classes.dir}" includeantruntime="false" />
         <copy todir="${classes.dir}">
-            <fileset dir="${res.dir}"/>
+            <fileset dir="${res.dir}" />
         </copy>
     </target>
 
+    <target name="compile-tests">
+        <mkdir dir="${testbuild.dir}" />
+        <javac srcdir="${tests.dir}" destdir="${testbuild.dir}" includeantruntime="false">
+            <classpath refid="classpath.test" />
+        </javac>
+    </target>
+
     <target name="jar" depends="compile">
-        <mkdir dir="${jar.dir}"/>
+        <mkdir dir="${jar.dir}" />
         <jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${classes.dir}">
             <manifest>
-                <attribute name="Main-Class" value="${main-class}"/>
+                <attribute name="Main-Class" value="${main-class}" />
             </manifest>
         </jar>
     </target>
@@ -41,7 +50,18 @@
     <!--<target name="run" depends="jar">
         <java jar="${jar.dir}/${ant.project.name}.jar" fork="true"/>
     </target>-->
-    <target name="test" depends="clean,jar"/>
-    <target name="main" depends="test"/>
+    <target name="test" depends="clean,jar,compile-tests">
+        <junit printsummary="on" haltonfailure="yes" fork="true">
+            <classpath>
+                <path refid="classpath.test" />
+                <pathelement location="${test.build.dir}" />
+            </classpath>
+            <formatter type="brief" usefile="false" />
+            <batchtest>
+                <fileset dir="${tests.dir}" includes="**/*Test.java" />
+            </batchtest>
+        </junit>
+    </target>
+    <target name="main" depends="test" />
 
 </project>
